--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
+        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     </head>
     <body>
         
@@ -45,8 +46,10 @@
                     <input type="text" class="form-control" id="destination-input" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">First Time</label>
-                    <input type="text" class="form-control" id="time-input" placeholder="">
+                    <label for="exampleFormControlInput1">First Train Time</label>
+                    <input type="time" id="time-input" class="form-control"
+               min="9:00" max="18:00" required />
+                    <!-- <input type="text" class="form-control" id="time-input" placeholder=""> -->
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Frequency</label>
@@ -76,12 +79,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th>1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
         </tbody>
       </table>
 
