--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
         <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     </head>
     <body>
-        
-        <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Add Train
-  </button>
   
   <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="centeredModal" tabindex="-1" role="dialog" aria-labelledby="centeredModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Add Train</h5>
+          <h5 class="modal-title" id="centeredModalTitle">Add Train</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -39,7 +34,14 @@
             <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
-                  <input type="text" class="form-control" id="name-input" placeholder="">
+                  <input list="" type="list" class="form-control" id="name-input" placeholder="">
+                  <datalist id="name-input-choice">
+                        <option value="Chocolate">
+                        <option value="Coconut">
+                        <option value="Mint">
+                        <option value="Strawberry">
+                        <option value="Vanilla">
+                    </datalist>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Destination</label>
@@ -68,6 +70,12 @@
 
 
 <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h2>Movie Car Pickup Service</h2>    
+            </div>
+        </div>
+
     <table class="table table-borderless">
         <thead>
           <tr>
@@ -82,17 +90,13 @@
         </tbody>
       </table>
 
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#centeredModal">
+        Add Train
+    </button>
+
 </div>
 
-
-
-
-
-
-
-
-
-        
         <script type="text/javascript" src="assets/javascript/scheduler.js"></script>
     </body>
 </html>
