--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
             <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
-                  <input list="" type="list" class="form-control" id="name-input" placeholder="">
+                  <input list="name-input-choice" class="form-control" id="name-input" placeholder="">
                   <datalist id="name-input-choice">
-                        <option value="Chocolate">
-                        <option value="Coconut">
-                        <option value="Mint">
-                        <option value="Strawberry">
-                        <option value="Vanilla">
+                        <option value="DeLorean">
+                        <option value="Griswold Family Truckster">
+                        <option value="Batmobile">
+                        <option value="Chitty Chitty Bang Bang">
+                        <option value="Mystery Machine">
+                        <option value="Mutts Cuts Van">
+                        <option value="Death Proof">
+                        <option value="Bluesmobile">
+                        <option value="Ecto-1">
+
                     </datalist>
                 </div>
                 <div class="form-group">
@@ -48,7 +53,7 @@
                     <input type="text" class="form-control" id="destination-input" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">First Train Time</label>
+                    <label for="exampleFormControlInput1">First Pickup Time</label>
                     <input type="time" id="time-input" class="form-control"
                min="9:00" max="18:00" required />
                     <!-- <input type="text" class="form-control" id="time-input" placeholder=""> -->
@@ -92,7 +97,7 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#centeredModal">
-        Add Train
+        Add Car Schedule
     </button>
 
 </div>
