--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="centeredModalTitle">Add Train</h5>
+          <h5 class="modal-title" id="centeredModalTitle">Add Car</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -77,7 +77,10 @@
 <div class="container">
         <div class="card">
             <div class="card-body">
-                <h2>Movie Car Pickup Service</h2>    
+                <h2 id="main">Movie Car Pickup Service</h2>    
+                <p>Need a ride? Forget Uber! Lyft is wack!</p>
+                <p>Ride like Batman or Doc Brown.</p>
+                <p>Get your group from point A to point B like Scooby Doo and the crew.</p>
             </div>
         </div>
 
