added intro text and comments to js file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
-                  <input list="name-input-choice" class="form-control" id="name-input" placeholder="">
+                  <input list="name-input-choice" class="form-control" id="name-input" placeholder="Select car">
                   <datalist id="name-input-choice">
                         <option value="DeLorean">
                         <option value="Griswold Family Truckster">
@@ -56,11 +56,10 @@
                     <label for="exampleFormControlInput1">First Pickup Time</label>
                     <input type="time" id="time-input" class="form-control"
                min="9:00" max="18:00" required />
-                    <!-- <input type="text" class="form-control" id="time-input" placeholder=""> -->
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Frequency</label>
-                    <input type="text" class="form-control" id="frequency-input" placeholder="">
+                    <input type="number" class="form-control" id="frequency-input" placeholder="">
                 </div>
               </form>
 
